# Systemsplushack

./: .gitignore  Issue Classification  Automated Resolution.docx  README.md  diagnose.sh  patch_tk.sh  pyproject.toml  requirements.txt  run.sh
client_app/: ai_bridge.py  main.py  system_utils.py
data_engine/: ticket_classifier.pkl  train_model.py  vectorizer.pkl
